--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,12 @@ globalog==0.1.0
 tqdm==4.67.1
 beautifulsoup4==4.12.3
 matplotlib==3.10.0
+xxhash==3.5.0
+requests==2.32.3
+langchain-openai==0.3.4
+langgraph==0.2.70
+langchain==0.3.18
+numpy==2.2.2
+imageio==2.37.0
+fasttext==0.9.3
+jserpy==0.1.2
